--- a/src/TicTacToe.css
+++ b/src/TicTacToe.css
@@ -3,7 +3,7 @@
 }
 .title{
     margin-top: 50px;
-    color: white;
+    color: #1f3540;
     font-size: 60px;
     display: flex;
     justify-content: center;
@@ -31,7 +31,7 @@
     height: 150px;
     width: 150px;
     background: #1f3540;
-    border: 4px solid cadetblue;
+    border: 4px solid wheat;
     border-radius: 12px;
     cursor: pointer;
 }
