--- a/src/index.css
+++ b/src/index.css
@@ -4,5 +4,5 @@ body {
 
     -webkit-font-smoothing:antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background: cadetblue;
+    background: wheat;
 }
